--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,10 @@
 language: python
 python:
-  - "2.7"
   - "3.4"
   - "3.5"
   - "3.6"
 env:
-  - DJANGO=1.7
-  - DJANGO=1.8
-  - DJANGO=1.9
-  - DJANGO=1.10
-  - DJANGO=1.11
+  - DJANGO=2.0
   - DJANGO=2.0
 install:
 # command to install dependencies
@@ -20,14 +15,10 @@ install:
 # command to run tests
 script:
   - coverage run --branch --source=notifications manage.py test
-matrix:
-  exclude:
-    - python: "2.7"
-      env: DJANGO=2.0
-    - python: "3.5"
-      env: DJANGO=1.7
-    - python: "3.6"
-      env: DJANGO=1.7
+#matrix:
+#  exclude:
+#    - python: "X.X"
+#      env: DJANGO=X.X
 
 
 after_success:
